# ghc-bug

./: README.md  ghc-bug.cabal  stack.yaml
src/: Main.hs
