name:                ghc-bug
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ghc-bug#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: Main
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , text
    , yesod-form
    , yesod
    , containers
    , iso3166-country-codes
    , classy-prelude
    , classy-prelude-yesod
  -- ghc-options: -O0
